[package]
name = "rust-no-std"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
publish = false
edition = "2018"

[dependencies]
no-std-compat = "0.2.0"

[features]
# enable support for memory allocations
alloc = ["no-std-compat/alloc"]
# enable support for the complete standard library
std = ["no-std-compat/std"]
