[package]
name = "rust-no-std"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
publish = false
edition = "2018"

[dependencies]
no-std-compat = "0.2.0"

[features]
# Enable support for memory allocations
alloc = ["no-std-compat/alloc"]
# Enable support for the complete standard library. It will also
# enable the alloc feature so we can write unified code handling
# platforms where memory allocations are available.
std = ["no-std-compat/std", "alloc"]
